# cislunar_proposal

./: .gitignore  LICENSE  README.md  cislunar_amateur_dtn_payload_proposal.md  go.mod  go.sum
ax25/: ax25.go  ax25_test.go
configs/: README.md  dtn-node-a.yaml  dtn-node-b.yaml  hdtn-config-node-a.json  hdtn-config-node-b.json  terrestrial-contact-plan.yaml
deploy/: README.md  apache-cislunar-redirect.conf  apache-radiant.conf  deploy.sh  package.sh  radiant.service  setup.sh
docs/: DTN-CALLSIGN-EID-CONFIGURATION.md  EMF-Talk-Outline  EMF-Village-THoughts  LTP-KISS-ARCHITECTURE.md  SSI-Report-Observations-for-RADIANT.md  amsat-uk-oscar-news-outline.md  future-geo-proposal.docx  future_thoughts.txt  (+11 more)
plugins/kiss-cla/: CMakeLists.txt  kiss_cla_plugin.cpp  kiss_cla_plugin.h
radiant-dtn-abstraction/: .gitignore  Cargo.toml
radiant-dtn-abstraction/docs/: INTEROP-ABSTRACTION-LAYER.md
radiant-dtn-abstraction/examples/: interop_20k.rs  interop_bidirectional.rs  interop_hardy_to_ion.rs  ping_f4jxq.rs
radiant-dtn-abstraction/src/: error.rs  error_mapping.rs  lib.rs
radiant-dtn-abstraction/src/adapter/: capability.rs  capability_check.rs  mod.rs  registry.rs  traits.rs
radiant-dtn-abstraction/src/adapter/hardy/: config_gen.rs  hot_reconfig.rs  lifecycle.rs  mod.rs  telemetry.rs
radiant-dtn-abstraction/src/adapter/ion/: config_gen.rs  hot_reconfig.rs  lifecycle.rs  mod.rs  telemetry.rs
radiant-dtn-abstraction/src/api/: handlers.rs  mod.rs  routes.rs  sse.rs
radiant-dtn-abstraction/src/events/: bus.rs  mod.rs
radiant-dtn-abstraction/src/lifecycle/: mod.rs  state.rs
radiant-dtn-abstraction/src/model/: config.rs  contact_plan.rs  convergence.rs  mod.rs  neighbor.rs  node.rs  routing.rs
radiant-dtn-abstraction/src/validation/: mod.rs
radiant-dtn-abstraction/tests/: api_test.rs  model_generators.rs  network_interop_test.rs  property_tests.rs
radiant-ion/: Cargo.toml  README.md
radiant-ion/examples/: api-demo.sh  g4dpz-ground-station.yaml
radiant-ion/src/: main.rs
(+308 files in other folders)
