[package]
name = "radiant-dtn-abstraction"
version = "0.1.0"
edition = "2021"
description = "Vendor-neutral DTN configuration generation, lifecycle management, and monitoring for BPv7 implementations"
license = "MIT"

[features]
default = []
integration-ion = []
integration-hardy = []
interop-network = []
interop-ota = []

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"

[dev-dependencies]
http-body-util = "0.1"
hyper = "1"
proptest = "1"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
hardy-ltp-proto = { path = "../hardy-ltp-cla/proto" }
tonic = "0.14"
